[gd_scene load_steps=9 format=3 uid="uid://dtymnua7uo7km"]

[ext_resource type="Script" uid="uid://cg7yeg21qlmli" path="res://scenes/ui/overlay/overlay.gd" id="1_81t38"]
[ext_resource type="StyleBox" uid="uid://db21yli1key1v" path="res://l.tres" id="1_mqy0c"]
[ext_resource type="Texture2D" uid="uid://dmemlmk5jkfuo" path="res://assets/textures/icons/heart.png" id="2_5qngs"]
[ext_resource type="Texture2D" uid="uid://bg2gxdm2t7hma" path="res://assets/textures/icons/money.png" id="3_ugq8m"]
[ext_resource type="Texture2D" uid="uid://chyej82623xsb" path="res://assets/textures/icons/skull.png" id="4_81t38"]
[ext_resource type="Texture2D" uid="uid://b350cwpbsw04t" path="res://assets/textures/icons/pause.png" id="5_ugq8m"]
[ext_resource type="Texture2D" uid="uid://4eyhelp4nm3h" path="res://assets/textures/icons/pause_hovered.png" id="6_81t38"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ugq8m"]
content_margin_left = 40.0
content_margin_top = 40.0
content_margin_right = 40.0
content_margin_bottom = 40.0
bg_color = Color(0.111197, 0.111197, 0.111197, 0.662745)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Overlay" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_81t38")

[node name="View" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="View"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 0
offset_right = 500.0
offset_bottom = 135.0
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="View/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 10
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="View/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("1_mqy0c")

[node name="HBoxContainer" type="HBoxContainer" parent="View/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="View/VBoxContainer/HBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_5qngs")
expand_mode = 3

[node name="Label" type="Label" parent="View/VBoxContainer/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "20"
horizontal_alignment = 2

[node name="PanelContainer2" type="PanelContainer" parent="View/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("1_mqy0c")

[node name="HBoxContainer2" type="HBoxContainer" parent="View/VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="View/VBoxContainer/HBoxContainer/PanelContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("3_ugq8m")
expand_mode = 3

[node name="Label" type="Label" parent="View/VBoxContainer/HBoxContainer/PanelContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 30
text = "209"
horizontal_alignment = 2

[node name="PanelContainer3" type="PanelContainer" parent="View/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("1_mqy0c")

[node name="HBoxContainer" type="HBoxContainer" parent="View/VBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="View/VBoxContainer/PanelContainer3/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_81t38")

[node name="Label" type="Label" parent="View/VBoxContainer/PanelContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_font_sizes/font_size = 40
text = "Fala 0/5"
horizontal_alignment = 2

[node name="TextureButton" type="TextureButton" parent="View"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1840.0
offset_right = 1880.0
offset_bottom = 40.0
grow_horizontal = 0
texture_normal = ExtResource("5_ugq8m")
texture_hover = ExtResource("6_81t38")
stretch_mode = 5

[node name="Pause" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="PanelContainer" type="PanelContainer" parent="Pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -618.5
offset_top = -162.0
offset_right = 618.5
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ugq8m")

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="Pause/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Gra została wstrzymana"
metadata/_edit_group_ = true

[node name="ResumeButton" type="Button" parent="Pause/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Wznów"

[node name="HBoxContainer" type="HBoxContainer" parent="Pause/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ResetButton" type="Button" parent="Pause/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "Resetuj"

[node name="QuitButton" type="Button" parent="Pause/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "Wróć do mapy"

[node name="Lose" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="PanelContainer" type="PanelContainer" parent="Lose"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -618.5
offset_top = -162.0
offset_right = 618.5
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ugq8m")

[node name="VBoxContainer" type="VBoxContainer" parent="Lose/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="Lose/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Gra została wstrzymana"
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Lose/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ResetButton" type="Button" parent="Lose/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "Resetuj"

[node name="QuitButton" type="Button" parent="Lose/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "Wróć do mapy"

[connection signal="pressed" from="View/TextureButton" to="." method="_on_pause"]
[connection signal="pressed" from="Pause/PanelContainer/VBoxContainer/ResumeButton" to="." method="_on_resume"]
[connection signal="pressed" from="Pause/PanelContainer/VBoxContainer/HBoxContainer/ResetButton" to="." method="_on_reset"]
[connection signal="pressed" from="Pause/PanelContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit"]
[connection signal="pressed" from="Lose/PanelContainer/VBoxContainer/HBoxContainer/ResetButton" to="." method="_on_reset"]
[connection signal="pressed" from="Lose/PanelContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit"]
